--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+body{
+    background-color: hsl(214, 47%, 23%);
+    color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.proLogo-container{
+    display:grid;
+    justify-content: center;
+    height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.score{
+    font-size: 55px;
+    margin: 20px 0px 20px 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.actions-container{
+    display:grid;
+    justify-content: center;
+    height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.rules-container{
+    margin: 25px 0 0 0;
+    display:grid;
+    justify-content: center;
+    height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#rules-button{
+    display: flex;
+    justify-content: center;
+    width:100px;
 }
