--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 body{
     background-color: hsl(214, 47%, 23%);
     color: white;
+    overflow: hidden;
 }
 
 .proLogo-container{
-    display:grid;
-    justify-content: center;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
     height: 100%;
+    margin-bottom:200px;
 }
 
 .score{
@@ -17,9 +20,31 @@ body{
 .actions-container{
     display:grid;
     justify-content: center;
-    height: 100%;
+    height: 100px;
 }
 
+.actions-container button{
+    border-radius: 100%;
+    padding:10px;
+}
+.actions-container:nth-child(1) button{
+    border: 10px solid green;
+}
+
+.actions-container:nth-child(2) button{
+    border: 10px solid red;
+}
+
+.actions-container:nth-child(3) button{
+    border: 10px solid yellow;
+}
+.actions-container:nth-child(4) button{
+    border: 10px solid blueviolet;
+}
+
+.actions-container:nth-child(5) button{
+    border: 10px solid turquoise;
+}
 .rules-container{
     margin: 25px 0 0 0;
     display:grid;
@@ -32,3 +57,34 @@ body{
     justify-content: center;
     width:100px;
 }
+
+.nonPro:nth-child(1){
+    transform: translate(-160px);
+}
+.nonPro:nth-child(2){
+    transform: rotate(-23deg) translate(253px) rotate(23deg);
+}
+.nonPro:nth-child(3){
+    transform: translate(53px);
+}
+
+.Pro:nth-child(1) {
+    transform: translate(-160px);
+ }
+ 
+ .Pro:nth-child(2) {
+    transform:rotate(-75deg) translate(253px) rotate(75deg);
+ }
+ 
+ .Pro:nth-child(3) {
+    transform: rotate(-32deg) translate(364px) rotate(36deg);
+ }
+ 
+ .Pro:nth-child(4) {
+    transform: rotate(-9deg) translate(310px) rotate(15deg);
+ }
+ 
+ .Pro:nth-child(5) {
+    transform: rotate(42deg) translate(-197px) rotate(-22deg);
+ }
+ 
