--- a/src/App.css
+++ b/src/App.css
@@ -106,11 +106,12 @@ body{
 }
 
 #rules-button,#play-again{
-    display: flex;
+    display: inline-block;
     color: white;
     border: 2px solid white;
     border-radius: 10px;
-    justify-content: center;
+    /* justify-content: center; */
+    margin:10px;
     width: 100px;
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-size: 20px;
